bugixing in supervised learning

--- a/supervised/smoothness.ipynb
+++ b/supervised/smoothness.ipynb
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "import torch\n",
     "from envs.robots.ccd import IK\n",
-    "from supervised.train import forward_kinematics\n",
+    "from supervised.utils import forward_kinematics\n",
     "import matplotlib.pyplot as plt\n",
     "\n"
    ]
