--- a/documentation/thesis/figures/background/AE.tex
+++ b/documentation/thesis/figures/background/AE.tex
@@ -1,4 +1,5 @@
-\begin{figure}[t]
+\begin{figure}
+    \centering
     \includegraphics[width=0.5\linewidth]{figures/background/AE.png}
     \caption[Autoencoder schematics]{\textbf{schematic drawing of a Autoencoder}}
     \label{fig:Autoencoder_schematics}
