--- a/documentation/thesis/figures/background/CVAE_structure.tex
+++ b/documentation/thesis/figures/background/CVAE_structure.tex
@@ -1,7 +1,7 @@
-\begin{figure}[t]
+\begin{figure}
     \begin{center}
         \includegraphics[width=0.5\linewidth]{figures/place_holder.png}
         \caption[Conditional Variational Autoencoder schematics]{\textbf{schematic drawing of a conditional Variational Autoencoder}}
-        \label{fig:Variational_Autoencoder_schematics}
+        \label{fig:conditional-Variational_Autoencoder_schematics}
     \end{center}
 \end{figure}
