--- a/documentation/thesis/figures/background/VAE.tex
+++ b/documentation/thesis/figures/background/VAE.tex
@@ -1,7 +1,6 @@
-\begin{figure}[t]
-    \begin{center}
-        \includegraphics[width=0.5\linewidth]{figures/background/VAE.png}
-        \caption[Variational Autoencoder schematics]{\textbf{schematic drawing of a Variational Autoencoder}}
-        \label{fig:Variational_Autoencoder_schematics}
-    \end{center}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.5\linewidth]{figures/background/VAE.png}
+    \caption[Variational Autoencoder schematics]{\textbf{schematic drawing of a Variational Autoencoder}}
+    \label{fig:Variational_Autoencoder_schematics}
 \end{figure}
