--- a/documentation/thesis/figures/background/activation_function.tex
+++ b/documentation/thesis/figures/background/activation_function.tex
@@ -1,4 +1,4 @@
-\begin{figure}[t]
+\begin{figure}
     \begin{center}
         \subfloat[Sigmoid]{
             \includegraphics[width=0.3\linewidth]{figures/place_holder.png}
@@ -16,5 +16,5 @@
             }
     \end{center}
     \caption[common activation functions in a neural network]{\textbf{common activation functions in a neural network}}
-    \label{fig:action_function}
+    \label{fig:activation_function}
 \end{figure}
