--- a/documentation/thesis/figures/background/algBackpropagation.tex
+++ b/documentation/thesis/figures/background/algBackpropagation.tex
@@ -1,4 +1,4 @@
-\begin{algorithm}[p]
+\begin{algorithm}
 \caption{Stochastic Gradient Descent: Neural Network}
 \label{alg:backpropnn}
 \begin{algorithmic}
