--- a/documentation/thesis/figures/background/neural_network.tex
+++ b/documentation/thesis/figures/background/neural_network.tex
@@ -1,8 +1,8 @@
-\begin{figure}[t]
+\begin{figure}
     \begin{center}
         \subfloat[schematic drawing of a feed forward neural network]{
             \includegraphics[width=0.4\linewidth]{figures/background/neural_network_architecture.png}
-            \label{fig:neural_network_schema/architecture}
+            \label{fig:neural_network_schema/feed-forward-architecture}
             }
         \hfill
         \subfloat[schematic drawing of a single neuron]{
@@ -10,6 +10,6 @@
             \label{fig:neural_network_schema/neuron}
             } 
     \end{center}
-    \caption[neural network schema]{\textbf{neural network schema drawing}}
+    \caption[neural network and neuron schema]{The figure shows the schematic drawing of a feed forward neural network and a neuron}
     \label{fig:neural_architecture}
 \end{figure}
