--- a/documentation/thesis/thesis_main.tex
+++ b/documentation/thesis/thesis_main.tex
@@ -58,14 +58,14 @@
     \input{chapters/1-introduction}
     \input{chapters/2-relatedwork}
     \input{chapters/3-background}
-    \input{chapters/4-approach}
+    \input{chapters/4-methodology}
     \input{chapters/5-experiments}
     \input{chapters/6-conclusions}
     \input{chapters/7-acknowledgments}
     
     % If you want a list of your ToDos at the end of the document
     % don't forget to remove before submission!
-    %\input{todo_list}
+    \input{todo_list}
 
     \bibliographystyle{ieeetr}
     \bibliography{bib/topic1,bib/topic2}
