cleanup + added figures

--- a/documentation/thesis/thesis_main.tex
+++ b/documentation/thesis/thesis_main.tex
@@ -74,6 +74,8 @@
     % \renewcommand{\bibname}{Literaturverzeichnis}
     \addcontentsline{toc}{chapter}{Bibliography}
     \newpage
+    \input{chapters/8-appendix}
+    \newpage
     \thispagestyle{empty}
     \mbox{}
 
