added new content

--- a/documentation/thesis/thesis_main.tex
+++ b/documentation/thesis/thesis_main.tex
@@ -60,9 +60,9 @@
     \input{chapters/3-background}
     \input{chapters/4-methodology}
     \input{chapters/5-experiments}
-    \input{chapters/6-conclusions}
-    \input{chapters/7-acknowledgments}
-    
+    \input{chapters/6-discussion}
+    \input{chapters/7-conclusions}
+    \input{chapters/8-acknowledgments}
     % If you want a list of your ToDos at the end of the document
     % don't forget to remove before submission!
     \input{todo_list}
@@ -74,7 +74,7 @@
     % \renewcommand{\bibname}{Literaturverzeichnis}
     \addcontentsline{toc}{chapter}{Bibliography}
     \newpage
-    \input{chapters/8-appendix}
+    \input{chapters/9-appendix}
     \newpage
     \thispagestyle{empty}
     \mbox{}
