--- a/documentation/thesis/thesis_main.tex
+++ b/documentation/thesis/thesis_main.tex
@@ -16,7 +16,7 @@
 % Include of titling must happen before \title etc.
 % that's why it's not in setup.tex
 \usepackage{titling}
-\title{Your Title Goes Here}
+\title{Expanding Action Space in Reinforcement Learning through Latent Models: A 2D Inverse Kinematics Benchmark}
 \author{Robin Uhrich}
 
 % Change to your first examiner
@@ -51,7 +51,7 @@
     \tableofcontents
     \listoffigures
     \listoftables
-    \listofalgorithms{}
+    \listofalgorithms
     \hypersetup{pageanchor=true}  % re-enable hyperlinking
 
     \mainmatter{}  % Arabic page numbers
