--- a/documentation/figures/expriment_resluts.ipynb
+++ b/documentation/figures/expriment_resluts.ipynb
@@ -1831,6 +1831,121 @@
      "text": [
       "WARNING:root:sample size is not a square -> compute for 289\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of sampled actions: (94008, 2)\n",
+      "solved ratio: 0.1903114186851211\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/uhrich/miniconda3/envs/BT/lib/python3.8/runpy.py\", line 194, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"/home/uhrich/miniconda3/envs/BT/lib/python3.8/runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 63, in <module>\n",
+      "    main()\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 59, in main\n",
+      "    execute_commands(args_dict, process)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 34, in execute_commands\n",
+      "    process.inference(args[\"checkpoint\"].rstrip(\"/\"), args[\"sample_size\"])\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/process/rl_process.py\", line 194, in inference\n",
+      "    self._multi_inference(checkpoint_dir, sample_size)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/process/rl_process.py\", line 165, in _multi_inference\n",
+      "    plot_pcolormesh(\n",
+      "  File \"/home/uhrich/Bachelorthesis/utils/plot.py\", line 45, in wrapper\n",
+      "    ax = plotter(ax=ax, color=color, alpha=alpha, **kwargs)\n",
+      "  File \"/home/uhrich/Bachelorthesis/utils/plot.py\", line 307, in plot_pcolormesh\n",
+      "    r = 1.75 * max(radius)\n",
+      "ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()\n",
+      "cp: cannot stat '../../results/sac/supervised_imitation/2_1693487256/3000/Minimal_distances.png': No such file or directory\n",
+      "cp: cannot stat '../../results/sac/supervised_imitation/2_1693487256/3000/Minimal_distances_index.png': No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results/sac/supervised_imitation/5_1693487345\n",
+      "use checkpoint for supervised at results/supervised/imitation_loss/5_1693274557/Regressor_2895_val_loss_1.1609.pt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:sample size is not a square -> compute for 289\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of sampled actions: (97028, 5)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Not possible to plot action distribution for 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solved ratio: 0.24567474048442905\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/uhrich/miniconda3/envs/BT/lib/python3.8/runpy.py\", line 194, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"/home/uhrich/miniconda3/envs/BT/lib/python3.8/runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 63, in <module>\n",
+      "    main()\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 59, in main\n",
+      "    execute_commands(args_dict, process)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 34, in execute_commands\n",
+      "    process.inference(args[\"checkpoint\"].rstrip(\"/\"), args[\"sample_size\"])\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/process/rl_process.py\", line 194, in inference\n",
+      "    self._multi_inference(checkpoint_dir, sample_size)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/process/rl_process.py\", line 165, in _multi_inference\n",
+      "    plot_pcolormesh(\n",
+      "  File \"/home/uhrich/Bachelorthesis/utils/plot.py\", line 45, in wrapper\n",
+      "    ax = plotter(ax=ax, color=color, alpha=alpha, **kwargs)\n",
+      "  File \"/home/uhrich/Bachelorthesis/utils/plot.py\", line 307, in plot_pcolormesh\n",
+      "    r = 1.75 * max(radius)\n",
+      "ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()\n",
+      "cp: cannot stat '../../results/sac/supervised_imitation/5_1693487345/3000/Minimal_distances.png': No such file or directory\n",
+      "cp: cannot stat '../../results/sac/supervised_imitation/5_1693487345/3000/Minimal_distances_index.png': No such file or directory\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "results/sac/supervised_imitation/10_1693487396\n",
+      "use checkpoint for supervised at results/supervised/imitation_loss/10_1693318960/Regressor_2675_val_loss_2.0594.pt\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:sample size is not a square -> compute for 289\n"
+     ]
     }
    ],
    "source": [
