--- a/documentation/figures/expriment_resluts.ipynb
+++ b/documentation/figures/expriment_resluts.ipynb
@@ -1946,6 +1946,55 @@
      "text": [
       "WARNING:root:sample size is not a square -> compute for 289\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "number of sampled actions: (103880, 10)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Not possible to plot action distribution for 10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "solved ratio: 0.20761245674740483\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/home/uhrich/miniconda3/envs/BT/lib/python3.8/runpy.py\", line 194, in _run_module_as_main\n",
+      "    return _run_code(code, main_globals, None,\n",
+      "  File \"/home/uhrich/miniconda3/envs/BT/lib/python3.8/runpy.py\", line 87, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 63, in <module>\n",
+      "    main()\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 59, in main\n",
+      "    execute_commands(args_dict, process)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/__main__.py\", line 34, in execute_commands\n",
+      "    process.inference(args[\"checkpoint\"].rstrip(\"/\"), args[\"sample_size\"])\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/process/rl_process.py\", line 194, in inference\n",
+      "    self._multi_inference(checkpoint_dir, sample_size)\n",
+      "  File \"/home/uhrich/Bachelorthesis/rl/process/rl_process.py\", line 165, in _multi_inference\n",
+      "    plot_pcolormesh(\n",
+      "  File \"/home/uhrich/Bachelorthesis/utils/plot.py\", line 45, in wrapper\n",
+      "    ax = plotter(ax=ax, color=color, alpha=alpha, **kwargs)\n",
+      "  File \"/home/uhrich/Bachelorthesis/utils/plot.py\", line 307, in plot_pcolormesh\n",
+      "    r = 1.75 * max(radius)\n",
+      "ValueError: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()\n",
+      "cp: cannot stat '../../results/sac/supervised_imitation/10_1693487396/3000/Minimal_distances.png': No such file or directory\n",
+      "cp: cannot stat '../../results/sac/supervised_imitation/10_1693487396/3000/Minimal_distances_index.png': No such file or directory\n"
+     ]
     }
    ],
    "source": [
