--- a/documentation/thesis/thesis_main.tex
+++ b/documentation/thesis/thesis_main.tex
@@ -68,7 +68,7 @@
     \input{todo_list}
 
     \bibliographystyle{ieeetr}
-    \bibliography{bib/topic1,bib/topic2}
+    \bibliography{bib/background}
     % bibliography is not in the table of contents per default, add it manually
     % enable the \renewcommand for german header
     % \renewcommand{\bibname}{Literaturverzeichnis}
