--- a/documentation/thesis/bib/relatedwork.bib
+++ b/documentation/thesis/bib/relatedwork.bib
@@ -37,7 +37,6 @@
   key =			 "operational space control, learning, em algorithm, redundancy resolution, reinforcement learning",
   URL =			 "https://www.ias.informatik.tu-darmstadt.de/uploads/Team/JanPeters/Learning_to_Control_in_Operational_Space.pdf",
   pages =		 "197-212",
-  crossref =		 "p10235"
 }
 
 @ARTICLE{Motor_Synergy_Learning,
@@ -90,10 +89,7 @@ doi = {10.1109/EURCON.2007.4400335}
 
 @article{PCA,
 title = {Principal components analysis (PCA)},
-journal = {Computers & Geosciences},
-volume = {19},
-number = {3},
-pages = {303-342},
+journal = {Computers and Geosciences},
 year = {1993},
 issn = {0098-3004},
 doi = {https://doi.org/10.1016/0098-3004(93)90090-R},
