--- a/documentation/thesis/thesis_main.tex
+++ b/documentation/thesis/thesis_main.tex
@@ -24,7 +24,7 @@
 \newcommand{\firstexaminer}{Prof.~Dr.~Joschka Boedecker}
 % Change to your second examiner, some undergraduate studies don't have a second examiner
 % in this case just comment out the following line
-\newcommand{\secondexaminer}{Prof.~Dr.~Wile E. Coyote}
+% \newcommand{\secondexaminer}{Prof.~Dr.~Wile E. Coyote}
 % Change to your adivers
 \newcommand{\advisers}{Jasper Hoffman}
 
