--- a/documentation/thesis/bib/background.bib
+++ b/documentation/thesis/bib/background.bib
@@ -177,7 +177,7 @@ url = "probml.ai"
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{A2C_Paper,
+@article{A3C_Paper,
   author       = {Volodymyr Mnih and
                   Adri{\`{a}} Puigdom{\`{e}}nech Badia and
                   Mehdi Mirza and
@@ -235,7 +235,7 @@ abstract = {This chapter considers the problem of efficiently estimating gradien
   pages={248-255},
   doi={10.1109/CVPR.2009.5206848}}
 
-@INPROCEEDINGS{VVG16,
+@INPROCEEDINGS{VGG16,
   author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Kai Li and Li Fei-Fei},
   booktitle={2009 IEEE Conference on Computer Vision and Pattern Recognition}, 
   title={ImageNet: A large-scale hierarchical image database}, 
