--- a/documentation/thesis/figures/background/variable_describtion_table.tex
+++ b/documentation/thesis/figures/background/variable_describtion_table.tex
@@ -42,7 +42,7 @@
         P & Probability function
         FK & Forward kinematics
         ||\mathcal{x}||_2 & Euclidean or $L^2$ norm $||x||_2 = \sqrt{\sum_{x\in\mathcal{x}} x^2}$ \\
-        (X, Y) & concatenations of two vectors $X$ and $Y$, \todo{define concatenations of multiple elements recursively?} \\
+        (X, Y) & concatenations of two vectors $X$ and $Y$,\\
     \end{tabular}
     \caption{Notation and names of variables}
 \label{tab:notation}
