--- a/documentation/thesis/thesis_main.tex
+++ b/documentation/thesis/thesis_main.tex
@@ -65,7 +65,7 @@
     \input{chapters/8-acknowledgments}
     % If you want a list of your ToDos at the end of the document
     % don't forget to remove before submission!
-    \input{todo_list}
+    % \input{todo_list}
 
     \bibliographystyle{ieeetr}
     \bibliography{bib/introduction, bib/relatedwork, bib/background, bib/methodology}
